# Renderer

./: .gitginore  CMakeLists.txt  README.md  main.cpp
cmake-4.2.0-tutorial-source/Step1/: CMakeLists.txt
cmake-4.2.0-tutorial-source/Step1/MathFunctions/: CMakeLists.txt
cmake-4.2.0-tutorial-source/Step1/Tutorial/: CMakeLists.txt  Tutorial.cxx
cmake-4.2.0-tutorial-source/Step2/: Exercise1.cmake  Exercise2.cmake  Exercise3.cmake
cmake-4.2.0-tutorial-source/Step3/: CMakeLists.txt
cmake-4.2.0-tutorial-source/Step3/Tutorial/: Tutorial.cxx
cmake-4.2.0-tutorial-source/Step4/: CMakeLists.txt
cmake-4.2.0-tutorial-source/Step4/MathFunctions/: CMakeLists.txt  MathFunctions.cxx
src/: CMakeLists.txt  Mesh.h  Model.h
src/GettingStarted/: CMakeLists.txt
src/GettingStarted/CameraChapter/: CMakeLists.txt  main.cpp
src/GettingStarted/CameraChapter/Classes/: Camera.cpp  Camera.h  MouseHandler.cpp  MouseHandler.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Transform.h
src/GettingStarted/ShadersChapter/: CMakeLists.txt  main.cpp
src/GettingStarted/ShadersChapter/Classes/: Shader.cpp  Shader.h
src/GettingStarted/ShadersChapter/Shaders/: fragmentShader.vert  vertexShader.vert
src/GettingStarted/TexturesChapter/: CMakeLists.txt  main.cpp
src/GettingStarted/TexturesChapter/Classes/: Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/GettingStarted/TexturesChapter/Shaders/: vertexShader.vert
src/GettingStarted/TransformationsChapter/: CMakeLists.txt  main.cpp
src/GettingStarted/TransformationsChapter/Classes/: Shader.cpp  Texture.h  Transform.cpp
src/GettingStarted/TransformationsChapter/Shaders/: fragmentShader.vert  vertexShader.vert
src/Lighting/: CMakeLists.txt
src/Lighting/LightChapter/: CMakeLists.txt  main.cpp
src/Lighting/LightChapter/Classes/: AssetManager.cpp  AssetManager.h  AssimpLoader.cpp  AssimpLoader.h  BasicShapesMeshGenerator.cpp  BasicShapesMeshGenerator.h  Camera.cpp  Camera.h  Engine.cpp  Engine.h  Entity.cpp  Entity.h  EnumUtils.h  Event.cpp  Event.h  FrameBuffer.cpp  FrameBuffer.h  GlmConverter.cpp  GlmConverter.h  IComponent.h  IWindow.cpp  IWindow.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelRenderInfo.cpp  ModelRenderInfo.h  MouseHandler.cpp  MouseHandler.h  OBB.cpp  OBB.h  RandomCoordinateGenerator.cpp  RandomCoordinateGenerator.h  RenderBuffer.cpp  RenderBuffer.h  (+28 more)
src/Lighting/LightChapter/Classes/BV/: AABB.cpp  AABB.h  Frustum.cpp  Frustum.h  IBoundingVolume.h  SphereBV.cpp  SphereBV.h
src/Lighting/LightChapter/Classes/GUI/: ComponentInspector.cpp  ComponentInspector.h  Editor.cpp  Editor.h  EntityTree.cpp  EntityTree.h  GeneralRendererSettingsComponent.cpp  GeneralRendererSettingsComponent.h  GenericComponent.cpp  GenericComponent.h  IWidget.cpp  IWidget.h  SceneView.cpp  SceneView.h  ShadowMapViewer.cpp  ShadowMapViewer.h  TransformComponent.cpp  TransformComponent.h  ViewportWidget.cpp  ViewportWidget.h
src/Lighting/LightChapter/Classes/Rendering/: Buffer.cpp  Buffer.h
src/Lighting/LightChapter/Components/: Camera.cpp  Camera.h  IComponent.h  Light.cpp  Light.h  ModelRenderInfo.cpp  ModelRenderInfo.h  OutlineComponent.cpp  OutlineComponent.h
src/Lighting/LightChapter/Components/Metadata/: ComponentPropertiesMetadata.cpp  ComponentPropertiesMetadata.h  ComponentProperty.cpp  ComponentProperty.h  GlobalEnumMetadata.cpp  GlobalEnumMetadata.h
src/Lighting/LightChapter/OpenGL/: OpenGL.h
src/Lighting/LightChapter/Shaders/: ShadowPassInstancingVert.glsl  SkyBoxFrag.glsl  SkyBoxVert.glsl  borderShader.frag  borderShader.vert  fragShaderBackpack.frag  fragmentShader.vert  fullScreenQuadFrag.glsl  fullScreenQuadVert.glsl  grassShaderFrag.glsl  lightDebug.frag  lightDebug.vert  shadowPassVert.glsl  vertexShader.vert  vertexShaderInstancing.vert
