# TODO1: Set the minimum required version of CMake to be 3.23
CMAKE_MINIMUM_REQUIRED(VERSION 3.23)

# TODO2: Create a project named Tutorial

project(Tutorial)


add_subdirectory(Tutorial)
add_subdirectory(MathFunctions)


# TODO3: Add an executable target called Tutorial to the project


# TODO7: Add the MathFunctions library as a linked dependency
#        to the Tutorial target


# TODO11: Add the Tutorial subdirectory to the project


# TODO13: Add the MathFunctions subdirectory to the project
